# suttacentral

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  Makefile  README.md  bower.json  clear_cloudflare_cache.sh  config.py  deployment_webhook.py  dev-reload.sh  docker-compose-pootle.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env_variables_setup.py  index.html  package-lock.json  python-requirements.txt  read.me  readme.md  readme.txt  wait_for_builder.sh  wait_for_flask.sh
server/: .dev.env  .isort.cfg  Dockerfile-flask  Pipfile  README.md  app.py  entrypoint.sh  env_variables_setup.py  forest.py  pyproject.toml  requirements.txt  util.py  uwsgi.ini
server/api-tester/: Dockerfile-api-tester  requirements.txt  run-tests.py
server/docker/: Dockerfile-chrome-headless  Dockerfile-flask  entrypoint.debug.sh  entrypoint.dev.sh  entrypoint.test.sh
server/env/: .base.env  .dev.env  .local.dev.env  .prod.base.env  .prod.env  .test.env
server/scripts/: wait_for_arango.py
server/server/: app.py  config.py  conftest.py  manage.py  wait_for_arango.py  wsgi.py
server/server/api/: views.py
server/server/arango_search/: texts.py
server/server/common/: arangodb.py  extensions.py  font_subsetter.py  hyphenator.py  hyphenator_pli.json  hyphenator_san.json  mail.py  models.py  queries.py  render.py  uid_matcher.py  util.py  utils.py
server/server/data_loader/: arangoload.py  available_languages.py  biblio.py  bilara.py  change_tracker.py  copy_localization.py  currencies.py  dictionaries.py  dictionary_full.py  dictionaryresults.py  divisions.py  extra_info.py  fuzzymatcher.py  generate_sitemap.py  glossary.py  homepage.py  hyphenation.py  images_files.py  language_id.py  languages.py  localized_languages.py  navigation.py  observability.py  order.py  paragraphs.py  po.py  sc_bilara_data.py  sc_html.py  segmented_data.py  sizes.py  swath_transform.py  textdata.py  textfunctions.py  unsegmented.py  unsegmented_texts.py  util.py
server/server/internationalization/: generate_pootle.py  load_pootle.py
server/server/migrations/: _base.py  _runner.py  base.py  initial_migration_001.py  runner.py
server/server/search/: __init__.py  adv_search.py  algolia_texts.py  constant.py  csv_loader.py  dictionaries.py  immediate_search.py  indexer.py  instant_search.py  langid.model  language_id.py  query.py  texts.py  uid_expansion.py  uid_loader.py  util.py  validate_filter.py  view.py
server/server/suttas/: views.py
server/server/tools/: calculate_download_size.py  pwa_sizes.json
server/src/common/: utils.py  (+2 more)
server/tests/: conftest.py
(+72262 files in other folders)
